@@ -9,7 +9,7 @@ use lib 't/lib';
 use DistGen qw/undent/;
 use XSLoader;
 use ExtUtils::HasCompiler 0.024 'can_compile_loadable_object';
-use File::ShareDir::Tiny ':ALL';
+use Dist::Build::Util ':sharedir';
 
 local $ENV{PERL_INSTALL_QUIET};
 local $ENV{PERL_MB_OPT};
@@ -176,9 +176,9 @@ sub _slurp { do { local (@ARGV,$/)=$_[0]; <> } }
   require blib;
   blib->import;
   ok( -d dist_dir('Foo-Bar'), 'sharedir has been made');
-  ok( -f dist_file('Foo-Bar', 'file.txt'), 'sharedir file has been made');
+  ok( -f catfile(dist_dir('Foo-Bar'), 'file.txt'), 'sharedir file has been made');
   ok( -d module_dir('Foo::Bar'), 'sharedir has been made');
-  ok( -f module_file('Foo::Bar', 'file.txt'), 'sharedir file has been made');
+  ok( -f catfile(module_dir('Foo::Bar'), 'file.txt'), 'sharedir file has been made');
   ok( -d catdir(qw/blib lib auto share dist Foo-Bar/), 'dist sharedir has been made');
   ok( -f catfile(qw/blib lib auto share dist Foo-Bar file.txt/), 'dist sharedir file has been made');
   ok( -d catdir(qw/blib lib auto share module Foo-Bar/), 'moduole sharedir has been made');
@@ -192,8 +192,8 @@ sub _slurp { do { local (@ARGV,$/)=$_[0]; <> } }
         my $libref = pop @DynaLoader::dl_librefs;
         DynaLoader::dl_unload_file($libref);
     }
-    ok( -f module_file('Foo::Bar', 'include/foo.h'), 'header file has been exported');
-    ok( -f module_file('Foo::Bar', 'compile.json'), 'compilation flag file has been exported');
+    ok( -f catfile(module_dir('Foo::Bar'), 'include/foo.h'), 'header file has been exported');
+    ok( -f catfile(module_dir('Foo::Bar'), 'compile.json'), 'compilation flag file has been exported');
   }
 
   require CPAN::Meta;
