@@ -1,6 +1,7 @@
 Revision history for Dist-Build
 
 {{$NEXT}}
+          - Embed File::ShareDir::Tiny into Dist::Build::Util
 
 0.021     2025-11-14 04:02:43+01:00 Europe/Brussels
           - Don't generate manpages on systems not supporting man paths
